# truefact

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  temp_script.sh
agent/: config.py  models.py  registry.py  services.py
tests/: test_endpoints.py
